# ai-companion-robot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent.md  architecture.md  progress.md  release-notes.md  robot-face-animations.md  robot-face-playground.html  rpi5-bringup.md  setup.md  wakeword-model-visualizer.html
scripts/: respeaker_capture.py  respeaker_init.sh  setup.sh  start-robot.sh  sync-to-pi.sh  test-display-diagnostics.py  test-fb0-display.py  test-wakeword-live.py  validate-rpi-runtime.sh
src/: main.py
src/ai/: __init__.py  cloud.py  local.py  realtime.py
src/audio/: __init__.py  capture.py  wake.py
src/hardware/: __init__.py  service.py
src/memory/: __init__.py  service.py
src/orchestrator/: __init__.py  capabilities.py  reactive.py  router.py  service.py  state.py
src/shared/: __init__.py  config.py  console.py  events.py  http_client.py  models.py  process_utils.py
src/stt/: __init__.py  respeaker_capture.py  service.py
src/tts/: __init__.py  alsa_backend.py  service.py
src/ui/: __init__.py  browser_protocol.py  browser_service.py  face.py  fb0_service.py  pygame_service.py  service.py
src/vision/: __init__.py  service.py
tests/: __init__.py  test_audio_capture.py  test_basic_service_mocks.py  test_browser_protocol.py  test_browser_service.py  test_cloud.py  test_config.py  test_console.py  test_fb0_service.py  test_main_helpers.py  test_process_utils.py  test_realtime.py  test_respeaker_capture.py  test_smoke.py  test_stt.py  test_tts.py  test_tts_alsa.py  test_ui_face.py
(+4 files in other folders)
