[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-companion-robot"
version = "0.1.0"
description = "An event-driven AI companion robot runtime."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Sebastian Schlote" }
]
dependencies = [
  "openwakeword>=0.6,<0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
tts = [
  "piper-tts[http]>=1.4,<2",
]
ui = [
  "pygame-ce>=2.5,<3",
]

[project.scripts]
ai-companion-robot = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "ai",
  "audio",
  "hardware",
  "memory",
  "orchestrator",
  "shared",
  "stt",
  "tts",
  "ui",
  "vision",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
